--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,6 @@ header {
 .about-me .profile-container {
   flex-basis: 30%; /* Set the width of the image container */
   text-align: center; /* Center the image horizontally */
-  /* Add space between image and text */
 }
 
 .about-me img {
@@ -243,20 +242,9 @@ header {
   font-family: var(--font-family-courier);
   letter-spacing: 2px;
   text-shadow: 2px 2px #333333;
-  animation: fadeIn 3s;
 }
 
-@keyframes fadeIn {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.05);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
+
 
 .about-me p {
   font-size: 1.2rem;
@@ -299,6 +287,28 @@ header {
     font-size: 1rem;
   }
 }
+
+.typing-demo {
+  width: 22ch;
+  animation: typing 2s steps(22), blink .5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+  font-size: 2em;
+}
+
+@keyframes typing {
+  from {
+    width: 0
+  }
+}
+    
+@keyframes blink {
+  50% {
+    border-color: transparent
+  }
+}
+
 
 .section {
   padding: 20px;
