--- a/css/style.css
+++ b/css/style.css
@@ -305,16 +305,8 @@ header {
   .about-me p {
     font-size: 1rem;
   }
-
-  .status-tag {
-    position: static;
-    margin: 10px auto 0;
-    top: 0;
-    transform: none;
-  }
 }
 
-/* Typing effect for section title */
 .typing-demo {
   width: 22ch;
   animation: typing 2s steps(22), blink .5s step-end infinite alternate;
@@ -326,16 +318,15 @@ header {
 
 @keyframes typing {
   from {
-    width: 0;
+    width: 0
   }
 }
-
+    
 @keyframes blink {
   50% {
-    border-color: transparent;
+    border-color: transparent
   }
 }
-
 
 .section {
   padding: 20px;
